# GattSnatcher

./: LICENSE  README.md  fileContents.txt
GattSnatcher/: CMakeLists.txt  notes.txt  partitions.csv  sdkconfig  sdkconfig.old
GattSnatcher/main/: CMakeLists.txt  Kconfig.projbuild  beeper.c  collector-ad.cpp  collector_utils.cpp  collector_utils.h  console_print_controller.cpp  console_print_controller.h  constants.h  device_database.cpp  device_database.h  device_interrogator.cpp  device_interrogator.h  device_scanner.cpp  device_scanner.h  hci_event_parser.cpp  hci_event_parser.h  idf_component.yml  interrogator_event_loop.cpp  interrogator_event_loop.h  mac_cache.cpp  mac_cache.h  main.cpp  output_handler.cpp  output_handler.h  rom_print_controller.cpp  rom_print_controller.h  single-channel-advertiser.c  struct_and_definitions.cpp  struct_and_definitions.h  uart_controller.cpp  uart_controller.h
dataAnalysis/: analysis_advertisement.py  analysis_gatt.py  combine_advertisement_files.py  combine_gatt_files.py  littlefsDownloader.py  process_interrogator_files.py  process_scanner_files.py
dataAnalysis/includes/: custom_apple_names.py  custom_uuid.py
